made amends with em and i tags

--- a/fan_page.html
+++ b/fan_page.html
@@ -13,9 +13,9 @@
     <main>
     <p>Elizabeth "Lisa" McGee is an <i>Irish</i> playwright and screenwriter, she came up with the idea during university. The show had its debut on Channel 4 in January 2018. A few facts about the show:</p>
     <ul>
-        <li>Erin’s Diary Is A <em>Real</em> Book</li>
+        <li>Erin’s Diary Is A <strong>Real</strong> Book</li>
         <li>Derry Girls Was Mostly Filmed In Derry Accept The School Scenes</li>
-        <li>Derry Girls Purposefully Included Northern Irish Humour and Dialect</li>
+        <li>Derry Girls <em>Purposefully</em> Included Northern Irish Humour and Dialect</li>
     </ul>
     <p>The breakout star has been Nicola Coughlan who has now been named best dressed !</p>
     <p><blockquote cite="https://www.vogue.co.uk/fashion/article/nicola-coughlan-style">
