additional html coding

--- a/fan_page.html
+++ b/fan_page.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<Style> #Characteroptions { 
+  background-color: pink;
+}
+</Style>
+  
 <meta charset="utf-8">
 <meta name="description" content="fan page">
 <meta name="keywords" content="TV shows">
@@ -8,8 +13,9 @@
 <meta name="author" content="Annabel Kihara">
 <title>Fan page Derry Girls</title>
 </head>
-  <body>
+  <body style background="pink">
     <h1>Derry Girls is the best TV show ever!</h1>
+    <img src="https://i2-prod.liverpoolecho.co.uk/incoming/article23453570.ece/ALTERNATES/s810/0_Derry-Girls.jpg" alt="Cast members of derry girls in costume"> 
     <main>
     <p>Elizabeth "Lisa" McGee is an <i>Irish</i> playwright and screenwriter, she came up with the idea during university. The show had its debut on Channel 4 in January 2018. A few facts about the show:</p>
     <ul>
@@ -21,6 +27,32 @@
     <p><blockquote cite="https://www.vogue.co.uk/fashion/article/nicola-coughlan-style">
         <p>“My stylist [Aimée Croysdill] always tries to get me in small ones, but I’m not Kendall Jenner enough to pull them off!”.</p>
       </blockquote></p>
+      <h3>If you have any recommnendations on what we can include on this fan page, do get in contact below!</h3>
+      <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Name"><br>
+        <label for="email">Email</label>
+        <input type="text" id="email" nam-e="email"
+      placeholder="Enter Email address">
+
+
+        <p>Who is your favourite character!</p> 
+        <input type="radio" id="Characteroptions" name="fav_character" value="Orla McCool"> 
+        <label for="Orla McCool">Orla Mcool</label><br>
+        <input type="radio" id="Characteroptions" name="fav_character" value="Erin Quinn"> 
+        <label for="Erin Quinn">Erin Quinn</label><br>
+        <input type="radio" id="Characteroptions" name="fav_character" value="Sister Michael"> 
+        <label for="Sister Michael">Sister Michael</label><br>
+        <textarea id="subject" name="subject" placeholder="Please send your suggestions;"
+        style="height:100px">
+        </textarea><br>
+        <input type="submit" value="Submit">
+        </form>
+
+        <p> Some of my favourite clips from the last three seasons:</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4xqH9y0BqF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      
     </main>
   </body>
 </html>
